ios-chat-sdk_versioned_docs/version-3.0/04-messaging/1 Sending Messages/index.md
---
sidebar_position: 1
title: Send a Message
slug: /send-a-message
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Using CometChat, you can send three types of messages:

1. A [text message](./send-a-message#text-message), the most common and standard message type.
2. A [media message](./send-a-message#media-message), for sending photos, videos and files.
3. A [custom message](./send-a-message#custom-message), for sending completely custom data using JSON structures.

You can also send metadata along with a text, media or custom message. Think, for example, if you'd want to share the user's location with every message, you can use the metadata field.

---

## Text Message

_In other words, as a sender, how do I send a text message?_

To send a text message to a single user or group, you need to use the `sendMessage()` method and pass a `TextMessage` object to it.



### Add Metadata

To send custom data along with a text message, you can use the metadata field provided in `TextMessage`. A metadata field is a [`dictionary`](https://docs.swift.org/swift-book/LanguageGuide/CollectionTypes.html) of type `[String: Any]` which will be received as it was sent without any processing from CometChat. It can be used to send any additional data that needs to be sent along with a message.

<Tabs>
<TabItem value="Swift" label="Swift">

```swift
let metadata = ["latitude":"50.6192171633316","longitude":"-72.68182268750002"];

textMessage.metaData = metadata;
```
</TabItem>
<TabItem value="Objective C" label="Objective C">

```Objective C
NSDictionary * metadata = @{@"latitude":@"50.6192171633316",@"longitude":@"-72.68182268750002"};

[textMessage setMetaData:metadata];
```
</TabItem>
</Tabs>


### Add Tags

To add a tag to a message you can use [`Array`](https://docs.swift.org/swift-book/LanguageGuide/CollectionTypes.html)  of strings that you need to set it to property `tags`.

<Tabs>
<TabItem value="Swift" label="Swift">

```swift
let tags = ["pinned"]

textMessage.tags = tags;
```
</TabItem>
<TabItem value="Objective C" label="Objective C">

```objectivec
NSArray * tags = @[@"latitude"];

[textMessage setTags:tags];
```
</TabItem>
</Tabs>


Once the text message object is ready, you need to use the `sendMessage()` method to send the text message to the recipient.

<Tabs>
<TabItem value="User(Swift)" label="User(Swift)">

```swift
let receiverID = "cometchat-uid-2"
let text = "Hello"

let textMessage = TextMessage(receiverUid: receiverID, text: text, receiverType: .user)

CometChat.sendTextMessage(message: textMessage, onSuccess: { (message) in

  print("TextMessage sent successfully. " + message.stringValue())

}) { (error) in

  print("TextMessage sending failed with error: " + error!.errorDescription);
}
```
</TabItem>
<TabItem value="User(Objective C)" label="User(Objective C)">

```objectivec
NSString *receiverID = @"cometchat-uid-1";
NSString *text       = @"Hello";

TextMessage *textMessage = [[TextMessage alloc]initWithReceiverUid:receiverID text:text receiverType:ReceiverTypeUser];

[CometChat sendTextMessageWithMessage:textMessage onSuccess:^(TextMessage * message) {
    
    NSLog(@"TextMessage sent successfully. %@",[message stringValue]);
  
} onError:^(CometChatException * error) {
    
    NSLog(@"TextMessage sending failed with error: %@",[error errorDescription]);
}];
```
</TabItem>
<TabItem value="Group(Swift)" label="Group(Swift)">

```swift
let receiverID = "cometchat-guid-102"
let text = "Hello"

let textMessage = TextMessage(receiverUid: receiverID, text: text, receiverType: .group)

CometChat.sendTextMessage(message: textMessage, onSuccess: { (message) in

  print("TextMessage sent successfully. " + message.stringValue())

}) { (error) in

  print("TextMessage sending failed with error: " + error!.errorDescription);
}
```

</TabItem>
<TabItem value="Group(Objective C)" label="Group(Objective C)">

```objectivec
NSString *receiverID = @"cometchat-guid-101";
NSString *text       = @"Hello";

TextMessage *textMessage = [[TextMessage alloc]initWithReceiverUid:receiverID text:text receiverType:ReceiverTypeGroup];

[CometChat sendTextMessageWithMessage:textMessage onSuccess:^(TextMessage * message) {
    
    NSLog(@"TextMessage sent successfully. %@",[message stringValue]);
  
} onError:^(CometChatException * error) {
    
    NSLog(@"TextMessage sending failed with error: %@",[error errorDescription]);
}];
```
</TabItem>
</Tabs>


The `TextMessage` class constructor takes the following parameters:

| Parameters | Information | 
| ---- | ---- | 
| receiverID | The `UID` or `GUID` of the recipient | 
| text | The text to be sent | 
| receiverType | The type of the receiver to whom the message is to be sent i.e `user` or `group` | 


When a text message is sent successfully, the response will include a `TextMessage` object which includes all information related to the sent message.

## Media Message

_In other words, as a sender, how do I send a media message like photos, videos & files?_

To send a media message to any user or group, you need to use the `sendMediaMessage()` method and pass a `MediaMessage` object to it.

### Add Metadata

To send custom data along with a media message, you can use the metadata field provided in `MediaMessage`. A metadata field is a [`dictionary`](https://docs.swift.org/swift-book/LanguageGuide/CollectionTypes.html) of type `[String: Any]` which will be received as it was sent without any processing from CometChat. It can be used to send any additional data that needs to be sent along with a message.

<Tabs>
<TabItem value="Swift" label="Swift">

```swift
let metadata = ["latitude":"50.6192171633316","longitude":"-72.68182268750002"];

mediaMessage.metaData = metadata;
```

</TabItem>
<TabItem value="Objective C" label="Objective C">

```objectivec
NSDictionary * metadata = @{@"latitude":@"50.6192171633316",@"longitude":@"-72.68182268750002"};

[mediaMessage setMetaData:metadata];
```
</TabItem>
</Tabs>


### Add Caption(Text along with Media Message)

To send a caption with a media message, you can use `setCaption` method and pass text to it.

<Tabs>
<TabItem value="Swift" label="Swift">

```swift
mediaMessage.caption = "Message Caption"
```
</TabItem>
</Tabs>



### Add Tags

To add a tag to a message you can use [`Array`](https://docs.swift.org/swift-book/LanguageGuide/CollectionTypes.html) of strings that you need to set it to property `tags`.

<Tabs>
<TabItem value="Swift" label="Swift">

```swift
let tags = ["pinned"]

textMessage.tags = tags;
```

</TabItem>
<TabItem value="Objective C" label="Objective C">

```objectivec
NSArray * tags = @[@"latitude"];

[textMessage setTags:tags];
```
</TabItem>
</Tabs>



There are 2 ways you can send Media Messages using the CometChat SDK:

1. **By providing the File :** You can directly share the file object while creating an object of the MediaMessage class. When the media message is sent using the sendMediaMessage() method, this file is then uploaded to CometChat servers and the URL of the file is sent in the success response of the sendMediaMessage() function.

<Tabs>
<TabItem value="User(Swift)" label="User(Swift)">

```swift
let receiverid = "cometchat-uid-2"

let mediaUrl = "file:///Library/Developer/CoreSimulator/Devices/(numbers and letters)/data/Containers/Data/Application/(numbers and letters)/Documents/image.jpg"

let mediaMessage = MediaMessage(receiverUid: receiverid, fileurl:mediaUrl, messageType: .image, receiverType: .user);

CometChat.sendMediaMessage(message: mediaMessage, onSuccess: { (message) in

  print("MediaMessage sent successfully. " + message.stringValue())

}) { (error) in

  print("MediaMessage sending failed with error: " + error.errorDescription);
}
```

</TabItem>
<TabItem value="User(Objective C)" label="User(Objective C)">

```objectivec
NSString *receiverID = @"cometchat-uid-1";

NSString *filePath = @"Library/Developer/CoreSimulator/Devices/(numbers and letters)/data/Containers/Data/Application/(numbers and letters)/Documents/image.jpg";

MediaMessage *mediaMessage = [MediaMessage alloc]initWithReceiverUid:receiverID fileurl:filePath messageType:messageTypeImage receiverType:ReceiverTypeUser];

[CometChat sendMediaMessageWithMessage:mediaMessage onSuccess:^(MediaMessage * message) {
    
    NSLog(@"MediaMessage sent successfully. %@",[message stringValue]);
  
} onError:^(CometChatException * error) {
    
    NSLog(@"MediaMessage sending failed with error: %@",[error errorDescription]);
    
}];
```
</TabItem>
</Tabs>


<Tabs>
<TabItem value="Group(Swift)" label="Group(Swift)">

```swift
let receiverid = "cometchat-uid-2"

let mediaUrl = "Library/Developer/CoreSimulator/Devices/(numbers and letters)/data/Containers/Data/Application/(numbers and letters)/Documents/image.jpg"

let mediaMessage = MediaMessage(receiverUid: receiverid, fileurl:mediaUrl, messageType: .image, receiverType: .group);

CometChat.sendMediaMessage(message: mediaMessage, onSuccess: { (message) in

  print("MediaMessage sent successfully. " + message.stringValue())

}) { (error) in

  print("MediaMessage sending failed with error: " + error.errorDescription);
}
```

</TabItem>
<TabItem value="Group(Objective C)" label="Group(Objective C)">

```objectivec
NSString *receiverID = @"cometchat-uid-1";

NSString *filePath = @"Library/Developer/CoreSimulator/Devices/(numbers and letters)/data/Containers/Data/Application/(numbers and letters)/Documents/image.jpg";

MediaMessage *mediaMessage = [MediaMessage alloc]initWithReceiverUid:receiverID fileurl:filePath messageType:messageTypeImage receiverType:ReceiverTypeGroup];

[CometChat sendMediaMessageWithMessage:mediaMessage onSuccess:^(MediaMessage * message) {
    
    NSLog(@"MediaMessage sent successfully. %@",[message stringValue]);
  
} onError:^(CometChatException * error) {
    
    NSLog(@"MediaMessage sending failed with error: %@",[error errorDescription]);
    
}];
```
</TabItem>
</Tabs>



To send a media message you need to create an object of the `MediaMessage` class. The initialize method of the `MediaMessage` class takes the following mandatory parameters:

| Parameter | Description |  | 
| ---- | ---- | ---- | 
| receiverId | The UID or GUID of the recipient | Required | 
| fileurl | The file path object to be sent | Required | 
| messageType | The type of the message that needs to be sent which in this case can be:<br />- image<br />- video<br />- audio<br />- file | Required | 
| receiverType | The type of the receiver to whom the message is to be sent<br />- user<br />- group | Required | 


2. **By providing the URL of the File:** The second way to send media messages using the CometChat SDK is to provide the SDK with the URL of any file that is hosted on your servers or any cloud storage. To achieve this you will have to make use of the Attachment class that is available in the MediaMessage class. For more information, you can refer to the below code snippet:

<Tabs>
<TabItem value="Swift" label="Swift">

```swift
let receiverid = "cometchat-uid-2"

let mediaUrl = "https://pngimg.com/uploads/mario/mario_PNG125.png"

let mediaMessage = MediaMessage(receiverUid: receiverid, fileurl:"", messageType: .image, receiverType: .user);

mediaMessage.attachment = Attachment(fileName: "FileName", fileExtension: "png", fileMimeType: "image/png", fileUrl: mediaUrl);

CometChat.sendMediaMessage(message: mediaMessage, onSuccess: { (message) in

  print("MediaMessage sent successfully. " + message.stringValue())

}) { (error) in

  print("MediaMessage sending failed with error: " + error.errorDescription);
}
```
</TabItem>
</Tabs>



On success, you will receive an object of the `MediaMessage` class containing all the information related to the sent media message.

If you wish to send a caption or some text along with the Media Message, you can use the `caption field` provided by the MediaMessage class. To set the caption you can use the `setCaption()` method and at the receiver end, you can obtain the caption using the `getCaption()` method. As with text messages, the metadata field can be used with media messages as well. Any additional information can be passed along with the media message as a `JSONObject`.

### Multiple Attachments in a Media Message

Starting version 3.0.906 & above the SDK supports sending of multiple attachments in a single media message. As in case for single attachment in a media message, there are two ways you can send Media Messages using the CometChat SDK:

1. **By providing an array of files:** You can now share a List of files while creating an object of the MediaMessage class. When the media message is sent using the `sendMediaMessage()` method, the files are uploaded to the CometChat servers & the URL of the files are sent in the success response of the `sendMediaMessage()` method.


<Tabs>
<TabItem value="User" label="User">

```swift
String receiverId = "cometchat-uid-1"

let data = try? Data(contentsOf: URL(string: " file:///private/var/mobile/Containers/Data/Application/B71B0A14/tmp/1111.jpeg")
let data1 = try? Data(contentsOf: URL(string: " file:///private/var/mobile/Containers/Data/Application/B71B0A14/tmp/2222.jpeg")
let data2 = try? Data(contentsOf: URL(string: " file:///private/var/mobile/Containers/Data/Application/B71B0A14/tmp/3333.jpeg")
                      
var files = [File]()
files.append(File(name: "FileName 1", data: data)
files.append(File(name: "FileName 2", data: data1)
files.append(File(name: "FileName 3", data: data2)

mediaMessage = MediaMessage(receiverUid: self.currentUser?.uid ?? "", files: files, messageType: .file, receiverType: .user)
             
CometChat.sendMediaMessage(message: mediaMessage, onSuccess: { (message) in
	print("Message sent successfully")
}, onError: { (error) in
  print("Message sending failed with exception : ", error?.errorDescription)
}
```
</TabItem>
</Tabs>

<Tabs>
<TabItem value="Group" label="Group">

```swift
mediaMessage = MediaMessage(receiverUid: self.currentUser?.uid ?? "", files: withFileArray, messageType: .file, receiverType: .user)
```
</TabItem>
</Tabs>

The `MediaMessage` class constructor takes the following parameters:

| Parameter | Description | 
| ---- | ---- | 
| **receiverId** | The `UID` or `GUID` of the recipient. | 
| **files** | An array of File object. File object is made of name and data of the file | 
| **messageType** | The type of the message that needs to be sent which in this case can be:<br /><br />1. CometChatConstants.MESSAGE_TYPE_IMAGE<br />2. CometChatConstants.MESSAGE___TYPE___VIDEO<br />3. CometChatConstants.MESSAGE___TYPE___AUDIO<br />4. CometChatConstants.MESSAGE___TYPE_FILE | 
| **receiverType** | The type of the receiver to whom the message is to be sent.<br /><br />1. CometChatConstants.RECEIVER_TYPE_USER<br />2. CometChatConstants.RECEIVER_TYPE_GROUP | 


2. **By providing the URL of the multiple files:** The second way to send multiple attachments using the CometChat SDK is to provide the SDK with the URL of multiple files that is hosted on your servers or any cloud storage. To achieve this you will have to make use of the `Attachment` class. For more information, you can refer to the below code snippet:

<Tabs>
<TabItem value="User" label="User">

```swift
let mediaMessage = MediaMessage(receiverUid: self.currentUser?.uid ?? "", files: [], messageType: .file, receiverType: .user)
var attachments = [Attachment]()
for i in 0..<5 {
	let attachement = Attachment(fileName: "test", fileExtension: "png", fileMimeType: "img/png", fileUrl: 			"https://pngimg.com/uploads/mario/mario_PNG125.png")
  attachments.append(attachement)
}
mediaMessage.attachments = attachments
CometChat.sendMediaMessage(message: mediaMessage!, onSuccess: { (message) in
	print("Message Sent Successfully"                                                               
}) { (error) in
			print("Message Sending Failed with exception : ",error.errorDesciption)
   }
}
```
</TabItem>
</Tabs>




When a media message is sent successfully, the response will include a `MediaMessage` object which includes all information related to the sent message.

You can use the `setMetadata()`, `setCaption()` & `setTags()` methods to add metadata, caption and tags respectively in exactly the same way as it is done while sending a single file or attachment in a Media Message.

## Custom Message

CometChat SDK allows you to send a completely custom message across. You can use this feature to send messages that do not fit in any default categories provided. In order to send a custom message, you need to use the `sendCustomMessage()` method.

The `sendCustomMessage()` methods takes an object of the `CustomMessage` which can be obtained using  the below two constructor:

<Tabs>
<TabItem value="Swift" label="Swift">

```swift
let customMessage : CustomMessage = CustomMessage(receiverId: receiverId, receiverType: .user, customData : customData, type: "Custom Type")
```
</TabItem>
</Tabs>


The above constructor, helps you create a custom message with the message type set to whatever is passed to the constructor and the category set to `custom`.

The parameters involved are:

1. receiverId - Unique id of the user or group to which the message is to be sent.
2. receiverType - Type of the receiver i.e user or group
3. type - custom message type that you need to set
4. customData - The data to be passed as the message in the form of a Dictionary object.

You can also use the subType field of the `CustomMessage` class to set a specific type for the CustomeMessage.

### Add Tags

To add a tag to a message you can use [`Array`](https://docs.swift.org/swift-book/LanguageGuide/CollectionTypes.html) of strings that you need to set it to property `tags`.

<Tabs>
<TabItem value="Swift" label="Swift">

```swift
let tags = ["pinned"]

textMessage.tags = tags;
```

</TabItem>
<TabItem value="Objective C" label="Objective C">

```objectivec
NSArray * tags = @[@"latitude"];

[textMessage setTags:tags];
```
</TabItem>
</Tabs>


Once the object of `CustomMessage` class is ready you can send the custom message using the `sendCustomMessage()` method.

<Tabs>
<TabItem value="User(Swift)" label="User(Swift)">

```swift
let receiverid = "cometchat-uid-2"

let customData : [String : Any] = ["customKey" : "customData"]

let customMessage = CustomMessage(receiverUid: receiverid, receiverType: .user, customData : customData, type: "Custom Type");

CometChat.sendCustomMessage(message: customMessage, onSuccess: { (message) in

  print("CustomMessage sent successfully. " + message.stringValue())

}) { (error) in

  print("CustomMessage sending failed with error: " + error!.errorDescription);
}
```

</TabItem>
<TabItem value="User(Objective C)" label="User(Objective C)">

```objectivec
NSString *receiverID = @"cometchat-uid-1";

NSMutableDictionary<NSString *, id> *customData = [NSMutableDictionary new];
    [customData setObject:@"customData" forKey:@"customKey"];

CustomMessage *customMessage = [CustomMessage alloc]initWithReceiverUid:receiverID receiverType:ReceiverTypeUser customData: customData type:@"Custom Type"];

[CometChat sendCustomMessageWithMessage:customMessage onSuccess:^(CustomMessage * message) {
    
    NSLog(@"CustomMessage sent successfully. %@",[message stringValue]);
  
} onError:^(CometChatException * error) {
    
    NSLog(@"CustomMessage sending failed with error: %@",[error errorDescription]);
    
}];
```
</TabItem>
<TabItem value="Group(Swift)" label="Group(Swift)">

```swift
let receiverid = "cometchat-uid-2"

let customData : [String : Any] = ["customKey" : "customData"]

let customMessage = CustomMessage(receiverUid: receiverid, receiverType: .group, customData : customData, type: "Custom Type");

CometChat.sendCustomMessage(message: customMessage, onSuccess: { (message) in

  print("CustomMessage sent successfully. " + message.stringValue())

}) { (error) in

  print("CustomMessage sending failed with error: " + error!.errorDescription);
}
```

</TabItem>
<TabItem value="Group(Objective C)" label="Group(Objective C)">

```objectivec
NSString *receiverID = @"cometchat-uid-1";

NSMutableDictionary<NSString *, id> *customData = [NSMutableDictionary new];
[customData setObject:@"customData" forKey:@"customKey"];

CustomMessage *customMessage = [CustomMessage alloc]initWithReceiverUid:receiverID receiverType:ReceiverTypeGroup customData: customData type:@"Custom Type"];

[CometChat sendCustomMessageWithMessage:customMessage onSuccess:^(CustomMessage * message) {
    
    NSLog(@"CustomMessage sent successfully. %@",[message stringValue]);
  
} onError:^(CometChatException * error) {
    
    NSLog(@"CustomMessage sending failed with error: %@",[error errorDescription]);
    
}];
```
</TabItem>
</Tabs>


The above sample explains how custom messages can be used to share the location with a user. The same can be achieved for groups.

In success, you will receive an object of the `CustomMessage` class.